# artg4tk

./: .clang-format  CMakeLists.txt  CMakePresets.json
artg4tk/: CMakeLists.txt
artg4tk/Analysis/: CMakeLists.txt  CheckCalorimeterHits_module.cc  CheckCalorimeterHits_module.hh  CheckDRCalorimeterHits_module.cc  CheckDRCalorimeterHits_module.hh  CheckGenParticle_module.cc  CheckGenParticle_module.hh  CheckHits_module.cc  CheckHits_module.hh  CheckInteractions_module.cc  CheckInteractions_module.hh  CheckPhotonHits_module.cc  CheckPhotonHits_module.hh  CheckProtonProduction_module.cc  CheckProtonProduction_module.hh  CheckSimEnergyDepositHit_module.cc  CheckSimEnergyDepositHit_module.hh  CheckTrackerHits_module.cc  CheckTrackerHits_module.hh
artg4tk/Core/: CMakeLists.txt  DetectorBase.hh  RunSettingsBase.hh  artg4Main_module.cc
artg4tk/DataProducts/: CMakeLists.txt  classes.h
artg4tk/DataProducts/EventGenerators/: CMakeLists.txt  GenParticle.cc  GenParticle.hh  GenParticleCollection.hh  PDGCode.hh  classes.h  classes_def.xml
artg4tk/DataProducts/G4DetectorHits/: ArtG4tkParticle.cc  ArtG4tkParticle.hh  ArtG4tkVtx.hh  CMakeLists.txt  G4Interaction.hh  classes.h  classes_def.xml
artg4tk/DataProducts/G4ModelConfig/: ArtG4tkModelConfig.cc  ArtG4tkModelConfig.hh  CMakeLists.txt  classes.h  classes_def.xml
artg4tk/EventGenerators/: CMakeLists.txt  EventGenerator_module.cc
artg4tk/ExpDataAccess/: CMakeLists.txt  JSON2Data.cc  JSON2Data.hh  VDBConnect.cc  VDBConnect.hh
artg4tk/G4PhysModelParamStudy/: CMakeLists.txt
artg4tk/G4PhysModelParamStudy/AnalysisBase/: AnalyzerWithExpDataBase.cc  AnalyzerWithExpDataBase.hh  CMakeLists.txt  ModelParamAnalyzerBase.cc  ModelParamAnalyzerBase.hh
artg4tk/G4PhysModelParamStudy/AnalysisModules/: AnalyzerEdepTrk_module.cc  AnalyzerHARP_module.cc  AnalyzerIAEA_module.cc  AnalyzerITEP_module.cc  AnalyzerNA49_module.cc  AnalyzerSASM6E_module.cc  CMakeLists.txt
artg4tk/G4PhysModelParamStudy/AnalysisProducts/: BeamThinTargetConfig.cc  BeamThinTargetConfig.hh  CMakeLists.txt  RecordChi2.cc  RecordChi2.hh  classes.h  classes_def.xml
artg4tk/G4PhysModelParamStudy/ApplicationModules/: CMakeLists.txt  ModelParamStudyHARP_module.cc  ModelParamStudyProducer_module.cc  ProcLevelMPVaryProducer_module.cc
artg4tk/G4PhysModelParamStudy/DataProd/: ArtG4tkParticle.cc  ArtG4tkVtx.hh  G4Interaction.hh  classes.h  classes_def.xml
artg4tk/G4PhysModelParamStudy/G4Components/: CMakeLists.txt  FTFPWrapper.cc  FTFPWrapper.hh  ModelConfigMapper.cc  ModelConfigMapper.hh  ModelParamStudyGeom.cc  ModelParamStudyGeom.hh  ProcessWrapper.cc  ProcessWrapper.hh
artg4tk/G4PhysModelParamStudy/G4Services/: CMakeLists.txt  PhysModelConfig.cc  PhysModelConfig_service.cc  PhysModelConfig_service.hh  ProcLevelSimSetup.cc  ProcLevelSimSetup_service.cc  ProcLevelSimSetup_service.hh
artg4tk/G4PhysModelParamStudy/RooMUTools/: CMakeLists.txt  RooMUHistSummary_module.cc
artg4tk/G4PhysModelParamStudy/StatAnalysisTools/: CMakeLists.txt  Chi2Calc.cc  Chi2Calc.hh
artg4tk/G4PhysModelParamStudy/fcl/: analysis-bertini-preco-iaea.fcl  analysis-harp-default.fcl  analysis-harp-roomusummary.fcl  analysis-lariat.fcl  ftf-params-process-level-include.fcl  proton3.824GeV-C-ProcLev-bertini-preco-add-LevDens1.fcl  proton3.824GeV-C-ProcLev-bertini-preco.fcl  test-ftf-na49.fcl  (+7 more)
artg4tk/actionBase/: ActionBase.cc  ActionBase.hh  CMakeLists.txt  EventActionBase.cc  EventActionBase.hh  PrimaryGeneratorActionBase.cc  PrimaryGeneratorActionBase.hh  RunActionBase.cc  RunActionBase.hh  StackingActionBase.cc  StackingActionBase.hh  SteppingActionBase.cc  SteppingActionBase.hh  TrackingActionBase.cc  TrackingActionBase.hh
artg4tk/geantInit/: ArtG4DetectorConstruction.cc  ArtG4DetectorConstruction.hh  ArtG4EventAction.cc  ArtG4EventAction.hh  ArtG4PrimaryGeneratorAction.cc  ArtG4PrimaryGeneratorAction.hh  ArtG4RunAction.cc  ArtG4RunAction.hh  ArtG4RunManager.cc  ArtG4RunManager.hh  ArtG4StackingAction.cc  ArtG4StackingAction.hh  ArtG4SteppingAction.cc  ArtG4SteppingAction.hh  ArtG4TrackingAction.cc  ArtG4TrackingAction.hh  CMakeLists.txt
artg4tk/lists/: ArCaptureGammas.cc  ArCaptureGammas.hh  ArParticleHPCapture.cc  ArParticleHPCapture.hh  ArParticleHPCaptureFS.cc  ArParticleHPCaptureFS.hh  CMakeLists.txt  G4BertiniNeutronBuilderBias.cc  G4BertiniNeutronBuilderBias.hh  G4BertiniPiKBuilderBias.cc  G4BertiniPiKBuilderBias.hh  G4BertiniProtonBuilderBias.cc  G4BertiniProtonBuilderBias.hh  G4EmStandardPhysics_muplusLaser.cc  G4EmStandardPhysics_muplusLaser.hh  G4HadronElasticPhysicsBias.cc  G4HadronElasticPhysicsBias.hh  G4HadronPhysicsQGSP_BERT_Bias.cc  G4HadronPhysicsQGSP_BERT_Bias.hh  MyG4BiasedBertiniNeutronBuilder.cc  MyG4BiasedBertiniNeutronBuilder.hh  MyG4DecayPhysics.cc  MyG4DecayPhysics.hh  MyG4HadronPhysicsQGSP_BERT_ArHP.cc  MyG4HadronPhysicsQGSP_BERT_ArHP.hh  MyG4HadronPhysicsQGSP_BERT_HP.cc  MyG4HadronPhysicsQGSP_BERT_HP.hh  MyG4HadronPhysicsQGSP_BERT_HP_NeutronXSBias.cc  MyG4HadronPhysicsQGSP_BERT_HP_NeutronXSBias.hh  MyG4MuIonisationNoDelta.cc  MyG4MuIonisationNoDelta.hh  MyG4NeutronPHPBuilder.cc  MyG4NeutronPHPBuilder.hh  MyQGSP_BERT_ArHP.cc  MyQGSP_BERT_ArHP.hh  MyQGSP_BERT_HP.cc  MyQGSP_BERT_HP.hh  MyQGSP_BERT_HP_NeutronXSBias.cc  MyQGSP_BERT_HP_NeutronXSBias.hh  MyQGSP_BERT_HP_NeutronXSBias.icc  (+5 more)
artg4tk/particles/: CMakeLists.txt  G4MuonLaser.cc  G4MuonLaser.hh
artg4tk/pluginActions/: CMakeLists.txt
artg4tk/pluginDetectors/: CMakeLists.txt
artg4tk/services/: ActionHolder.cc  ActionHolder_service.cc  ActionHolder_service.hh  CMakeLists.txt  DetectorHolder.cc  DetectorHolder_service.cc  DetectorHolder_service.hh  Dummy.cc  Dummy_service.cc  Dummy_service.hh  PhysicsListHolder.cc  PhysicsListHolder_service.cc  PhysicsListHolder_service.hh  PhysicsListServiceBase.hh  RunSettings.cc  RunSettings_service.cc  RunSettings_service.hh
artg4tk/util/: CMakeLists.txt  DataFromRunOrService.hh  StringIDs.cc  StringIDs.hh  array_macros.hh  util.cc  util.hh
examples/: CMakeLists.txt  Econt.C  eic_CrystalCal_PbF2.gdml  eic_calo.fcl  eic_calo_ele.fcl  lArDet.fcl  lArDet.gdml
(+229 files in other folders)
