include(ArtDictionary)
include(CetMake)
include(BuildPlugins)

add_subdirectory(actionBase)
add_subdirectory(Core)

cet_collect_plugin_builders(Modules artg4tk::ServiceBuilders)
include(artg4tk::ServiceBuilders)

add_subdirectory(Analysis)
add_subdirectory(DataProducts)
add_subdirectory(EventGenerators)
add_subdirectory(geantInit)
add_subdirectory(particles)
add_subdirectory(lists)
add_subdirectory(pluginActions)
add_subdirectory(pluginDetectors)
add_subdirectory(services)
add_subdirectory(util)

if (artg4tk_INTERNAL)
  set(artg4tk_G4PhysModelParamStudy True)
endif()
if (artg4tk_G4PhysModelParamStudy)
  set(artg4tk_ExpDataAccess True)
endif()

if (artg4tk_ExpDataAccess)
  add_subdirectory(ExpDataAccess)
  if (artg4tk_G4PhysModelParamStudy)
    add_subdirectory(G4PhysModelParamStudy)
  endif()
endif()
